# PermutationTest

C/: main.c  out  permutation.c  permutation.h  permutationTest.c  permutationTest.h  utils.c  utils.h
c_output/: 0.2_mean_uniform_1000_out.txt  ho_0.5_mean_gaussian_1000_4_vector_30_sample_out.txt  ho_same_mean_gaussian_1000_4_vector_30_sample_out.txt  mw_0-1_2-1_1-1_2-2_mixture_gaussian_1000_out.txt  mw_0.3_mean_uniform_1000_out.txt  mw_0.7_mean_gaussian_1000_out.txt  mw_1_mean_chi_squared_1000_out.txt  mw_same_mean_chi_squared_1000_out.txt  mw_same_mean_gaussian_1000_out.txt  mw_same_mean_mixture_gaussian_1000_out.txt  mw_same_mean_uniform_1000_out.txt  same_mean_uniform_1000_out.txt
cl/: CMakeLists.txt  main.cpp
cl/CLUtils/: CMakeLists.txt
cl/PTest/: CMakeLists.txt
cl/PTest/include/: environement.hpp  kernelloader.hpp  ptest.hpp  ptestgpudata.hpp  rankptest.hpp  sourceloader.hpp
cl/PTest/src/: environement.cpp  kernelloader.cpp  ptest.cpp  ptestgpudata.cpp  rankptest.cpp  sourceloader.cpp
cl/kernels/: bugTest.cl  cpm_kernel.cl  example.cl  kernels_info.txt  ttest.cl  utils.cl  vectorDifference3.cl
cl/log/: chi-disequal.txt  chi-equal.txt  normal-disequal.txt  normal-equal.txt  normal2-disequal.txt  uniform-disequal.txt  uniform-equal.txt
cl/tests/: CMakeLists.txt
cl/tests/TPTest/: CMakeLists.txt
cl/tests/TPTest/include/: pttest.hpp
cl/tests/TPTest/src/: environementTest.cpp  gpuDataTest.cpp  kernelLoaderTest.cpp  kernelsTest.cpp  ptest.cpp
latex/: Template PoliMI.odp  Template PoliMI.pptx  Untitled.xcf  implementazione.aux  implementazione.tex  (+12 more)
(+217 files in other folders)
